...


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="208dp"
            android:layout_height="80dp"
            android:layout_above="@+id/next_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="300dp">

            <TextView
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Gender" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female" />
        </RadioGroup>

        <EditText
            android:id="@+id/height_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/weight_input"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="29dp"
            android:ems="10"
            android:hint="Enter Height (cms)"
            android:inputType="number"
            tools:layout_editor_absoluteX="85dp"
...


        <EditText
            android:id="@+id/weight_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/age_input"
            android:layout_alignLeft="@+id/age_input"
            android:layout_alignStart="@+id/age_input"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Enter Weight"
            android:inputType="number"
...
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metric"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="68dp"
            android:layout_alignBaseline="@+id/switch1"
            android:layout_alignBottom="@+id/switch1"
            android:layout_toLeftOf="@+id/weight_input"
            android:layout_toStartOf="@+id/weight_input"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp" />

...
