...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Light- exercise/sports (1-3 times/week)" />

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Moderate - exercise/sports (3-5 times/week)" />



            <RadioButton
                android:id="@+id/radioButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="High - exercise/sports (6-7 times/week)" />

            <RadioButton
                android:id="@+id/radioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Heavy - very hard sports/exercise (twice/day)" />
        </RadioGroup>

...
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/bmi_val"
            android:layout_toRightOf="@+id/bmi_val" />

        <Button
            android:id="@+id/calc_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate Calories"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_alignParentBottom="true"
...
