package com.myapp.caloriemate.test;
import com.myapp.caloriemate.*;
import android.util.Log;
import android.content.pm.ActivityInfo;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.*;
import android.support.test.espresso.ViewAction;
import android.support.test.espresso.action.EspressoKey;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.uiautomator.*;
import android.support.test.runner.AndroidJUnit4;
import org.hamcrest.*;
import android.support.test.espresso.assertion.ViewAssertions;
import android.test.suitebuilder.annotation.SmallTest;
import android.util.Pair;
import android.content.Intent;
import android.support.test.rule.ActivityTestRule;
import android.view.View;
import org.junit.runner.JUnitCore;
import org.junit.runner.Result;
import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import java.util.Random;
import com.myapp.caloriemate.R;
@RunWith(AndroidJUnit4.class)
	public class ActivityTest30{
	private UiDevice mDevice;
	private Intent temp;
	@Rule
	public ActivityTestRule<com.myapp.caloriemate.MainActivity> mActivityRule = new ActivityTestRule(com.myapp.caloriemate.MainActivity.class);
	@Before
	public void setUp() throws Exception{
		mDevice = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation());
	}
	@After
	public void tearDown() throws Exception{}
@Test
public void testnumber0() 
{
	Log.d("TestExecutionStarted","TestCase0");

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("7"));
		Espresso.closeSoftKeyboard();

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
		Espresso.pressBack();
//Event for a menu item
		Espresso.pressBack();
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("851246"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
		Espresso.pressBack();
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());


	Log.d("TestExecutionFinished","TestCase0");
}

@Test
public void testnumber1() 
{
	Log.d("TestExecutionStarted","TestCase1");

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText(""));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("17537"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("0"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("1"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("5"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("5"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("851246"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("5"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("1"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("17537"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText(""));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("5"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("4"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("0"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("7521"));
		Espresso.closeSoftKeyboard();

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.calc_calories)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
//Event for a menu item
		Espresso.pressBack();

	Log.d("TestExecutionFinished","TestCase1");
}

@Test
public void testnumber2() 
{
	Log.d("TestExecutionStarted","TestCase2");

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton10)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText(""));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("17537"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("5"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("851246"));
		Espresso.closeSoftKeyboard();

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("0"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("7"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText(""));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("2"));
		Espresso.closeSoftKeyboard();

		//Event for a button
			Espresso.onView(ViewMatchers.withId(R.id.next_button)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton8)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton9)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

//Event for a menu item
		Espresso.pressBack();
		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("851246"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("0"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("851246"));
		Espresso.closeSoftKeyboard();

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("4"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("4"));
		Espresso.closeSoftKeyboard();

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

//Event for a menu item
	mDevice.pressKeyCode(276);
	mDevice.pressKeyCode(224);
		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.weight_input)).perform(ViewActions.clearText(),ViewActions.typeText("4"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("7521"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("0"));
		Espresso.closeSoftKeyboard();

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton)).perform(ViewActions.click());

		//Event for a radiobutton
					Espresso.onView(ViewMatchers.withId(R.id.radioButton2)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.age_input)).perform(ViewActions.clearText(),ViewActions.typeText("235"));
		Espresso.closeSoftKeyboard();

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for a switch
			Espresso.onView(ViewMatchers.withId(R.id.switch1)).perform(ViewActions.click());

		//Event for EditText
	Espresso.onView(ViewMatchers.withId(R.id.height_input)).perform(ViewActions.clearText(),ViewActions.typeText("17537"));
		Espresso.closeSoftKeyboard();

		//Event for EditText
